# quant-system-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/app/: Dockerfile
docs/: DECISIONS.md  DEPLOYMENT.md  PIPELINE.md  SIGNALS.md  STRATEGIES.md  architecture.md  code-quality.md  dev-commands.md  templates.md
docs/plans/: 2026-03-07-strategy-expansion-design.md  2026-03-07-strategy-expansion.md  2026-03-08-ninjatrader-data-pipeline-design.md  2026-03-08-ninjatrader-data-pipeline.md
scripts/: copy_data.sh  ingest_data.py  run_optuna.py  seed_level_experiments.py  setup_dev.sh  verify_data.py
scripts/ninjatrader/: CsvExporter.cs
src/config/: instruments.py  settings.py
src/db/: connection.py  migrations.py  queries.py  schema.sql
src/quant/automation/: checklist_generator.py  loop.py  notifier.py  pine_generator.py  seeder.py
src/quant/data/: cache.py  (+7 more)
src/webapp/: deps.py  main.py
tests/: conftest.py
tests/integration/: test_api.py
tests/regression/: test_known_strategies.py
tests/unit/: test_adx_ema.py  test_backtest_entry_price.py  test_bollinger_squeeze.py  test_data_health.py  test_db.py  test_donchian_breakout.py  test_ema_rsi.py  test_filters.py  test_grid_expander.py  test_ingest.py  test_keltner_channel.py  test_level_breakout.py  test_levels.py  test_macd_trend.py  test_metrics.py  test_monte_carlo.py  test_mtf_ema_alignment.py  test_pipeline.py  test_portfolio_optimizer.py  test_regime_switch.py  test_rsi2_reversal.py  test_rsi_bollinger_filtered.py  test_session.py  test_session_momentum.py  test_splitter.py  test_supertrend.py  test_volume_breakout.py
(+52 files in other folders)
